syntax = "proto3";


message HelloRequest
{
	  string firstName = 1;
		string lastName = 2;
}


message HelloResponse
{
	 string message = 1;
}

service HelloService
{
	 rpc Welcome(HelloRequest) returns (HelloResponse);
}